<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>EmojiTextArea</artifactId>
    <name>EmojiTextArea</name>

    <parent>
        <groupId>com.gluonhq.chatapp</groupId>
        <artifactId>chatapp</artifactId>
        <version>1.1.7-SNAPSHOT</version>
    </parent>

    <properties>
        <mainClassName>com.gluonhq.emoji.test.EmojiTextAreaTest</mainClassName>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release>
                    <compilerArgs>
                        <arg>--add-opens</arg>
                        <arg>javafx.graphics/javafx.scene.text=richtextfx</arg>
                        <arg>--add-opens</arg>
                        <arg>javafx.graphics/com.sun.javafx.text=richtextfx</arg>
                        <arg>--add-opens</arg>
                        <arg>javafx.graphics/com.sun.javafx.scene.text=richtextfx</arg>
                        <arg>--add-opens</arg>
                        <arg>javafx.graphics/com.sun.javafx.geom=richtextfx</arg>
                        <arg>--add-opens</arg>
                        <arg>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx-maven-plugin-version}</version>
                <configuration>
                    <options>
                        <arg>--add-opens</arg>
                        <arg>javafx.graphics/javafx.scene.text=richtextfx</arg>
                        <arg>--add-opens</arg>
                        <arg>javafx.graphics/com.sun.javafx.text=richtextfx</arg>
                        <arg>--add-opens</arg>
                        <arg>javafx.graphics/com.sun.javafx.scene.text=richtextfx</arg>
                        <arg>--add-opens</arg>
                        <arg>javafx.graphics/com.sun.javafx.geom=richtextfx</arg>
                        <arg>--add-opens</arg>
                        <arg>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</arg>
                    </options>
                    <mainClass>${mainClassName}</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>${mainClassName}</mainClass>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for debugging -->
                        <id>debug</id>
                        <configuration>
                            <options>
                                <arg>--add-opens</arg>
                                <arg>javafx.graphics/javafx.scene.text=richtextfx</arg>
                                <arg>--add-opens</arg>
                                <arg>javafx.graphics/com.sun.javafx.text=richtextfx</arg>
                                <arg>--add-opens</arg>
                                <arg>javafx.graphics/com.sun.javafx.scene.text=richtextfx</arg>
                                <arg>--add-opens</arg>
                                <arg>javafx.graphics/com.sun.javafx.geom=richtextfx</arg>
                                <arg>--add-opens</arg>
                                <arg>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</arg>
                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000</option>
                            </options>
                            <mainClass>${mainClassName}</mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.gluonhq.chatapp</groupId>
            <artifactId>EmojiData</artifactId>
            <version>1.1.7-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.chatapp</groupId>
            <artifactId>EmojiPopOver</artifactId>
            <version>1.1.7-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>${controlsfxVersion}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>1.0.2-gluon</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>jakarta.json</groupId>
            <artifactId>jakarta.json-api</artifactId>
            <version>1.1.6</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>jakarta.json</artifactId>
            <version>1.1.6</version>
            <classifier>module</classifier>
        </dependency>
    </dependencies>
</project>
